<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Challenge Yourself</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select_challenge">Select Challenge</string>
    <string name="title_activity_main">Challenge Yourself</string>
    <string name="title_activity_set_fragment">Enter Set Information</string>
    <string name="page_title_set_fragment">Set Information</string>
    <string name="page_title_history_fragment">History</string>
    <string name="pref_category_notification">Notification Settings</string>
    <string name="pref_category_interval">Interval Settings</string>
    <string name="pref_notify">Notifications</string>
    <string name="pref_notify_summary">Specifies if the notifications should be displayed when an activity should be performed.</string>
    <string name="pref_skip_notify">Only display last notification</string>
    <string name="pref_skip_notify_summary">Specifies if only the last notification should be displayed, or all of them until each is dismissed.</string>
    <string name="pref_start_time">Day start time</string>
    <string name="pref_start_time_summary">Specifies what time the challenge will begin each day.</string>
    <string name="set_timer_description">Timer</string>
    <string name="text_set_interval">Select the interval:</string>
    <string name="text_set_entry">Enter how many push-ups were done:</string>
    <string name="text_set_description">Record the number of push-ups done in each interval.</string>
    <string name="dialog_create_challenge">Would you like to start a new challenge?</string>
    <string name="notification_test_content">You have a test to enter</string>
    <string name="notification_set_inbox">you need to do %1$d %2$s</string>
    <string name="notification_normal_content">You have a set to enter</string>
    <string name="notification_normal_multiple_content">You have multiple sets to enter</string>
    <string name="notification_both_content">You have a test and set to enter</string>
    <string name="notification_both_multiple_content">You have a test and multiple sets to enter</string>
    <string name="notification_title">Time to challenge yourself</string>

</resources>
